k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: payment-api
          imagePullPolicy: Never
          image: kwobia/payment-api:1.4.3
          ports:
            - containerPort: 8990
