k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-postgres
  namespace: payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-postgres
  template:
    metadata:
      labels:
        app: payment-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/payment/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: payment-postgres-pv-claim
