k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-payment-service
  namespace: payment-api
  labels:
    app: postgres-payment
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres-payment
