k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-server-cluster-ip-service
  namespace: payment-api
spec:
  type: NodePort
  selector:
    component: server
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30033
      protocol: TCP
      name: http
